--- a/index.html
+++ b/index.html
@@ -60,19 +60,12 @@
     <div class="services">
       <div class="container">
         <div class="row3" style="background-image: url(assets/backgrounds/s_image.jpg);">
-          
           <p class="para2">
-            <h3>SERVICES</h3>
+          <h3>SERVICES</h3>
           Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision <br><br>
           The outcome of this scoping session is a proposal or high-level statement of work <br><br>
           based on your requirements, we can provide a complete offering or just the pieces you need.</p>
-          <br><br><br><br>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="whatWeDo">
+          <br><br><br><br></div></div></div><div class="whatWeDo">
       <div class="container">
         <h3>WHAT WE DO</h3>
         <div class="row4">
